# kinect-one

./: Cargo.toml  README.md
src/: camera.rs  data.rs  device.rs  lib.rs  main.rs  settings.rs
src/command/: commands.rs  mod.rs  response.rs
src/device/: closed.rs  mod.rs  opened.rs
src/packet/: mod.rs
src/packet/parser/: color.rs  depth.rs  mod.rs  rgb.rs
src/processor/: mod.rs  registration.rs
src/processor/color/: fev.rs  mod.rs  moz.rs  turbo.rs  zen.rs  zune.rs
src/processor/depth/: cpu.rs  mod.rs  opencl.rs  opencl_kde.rs
src/processor/depth/opencl/: opencl_depth_packet_processor.cl  opencl_kde_depth_packet_processor.cl
src/processor/rgb/: mod.rs  moz.rs  turbo.rs  zune.rs
