[package]
name = "kinect-one"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.18"

nusb = { git = "https://github.com/FreddyFunk/nusb", branch = "feature/implement-isochronous-transfers-for-linux", features = ["tokio"] }

zune-jpeg = { version = "0.5.15", optional = true }
mozjpeg = { version = "0.10.13", optional = true }
turbojpeg = { version = "1.4.0", optional = true }

ocl = { version = "0.19.7", optional = true }

tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "time", "io-util"] }

[features]
default = [
    "zune_rgb",
    "moz_rgb",
    "turbo_rgb",
    "cpu_depth",
    "opencl_depth",
    "opencl_kde_depth",
]

zune_rgb = ["dep:zune-jpeg"]
moz_rgb = ["dep:mozjpeg"]
turbo_rgb = ["dep:turbojpeg"]

cpu_depth = []
opencl_depth = ["dep:ocl"]
opencl_kde_depth = ["dep:ocl"]
