[package]
name = "kinect-one"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "2.0.18"

nusb = { git = "https://github.com/FreddyFunk/nusb", branch = "feature/implement-isochronous-transfers-for-linux", features = ["tokio"] }

fev = { version = "0.2.3", optional = true }
winit = { version = "0.30.13", default-features = false, features = ["x11", "wayland", "wayland-dlopen", "rwh_06"], optional = true }
zenjpeg = { version = "0.8.2", optional = true }
enough = { version = "0.4.3", optional = true }
zune-jpeg = { version = "0.5.15", optional = true }
mozjpeg = { version = "0.10.13", optional = true }
turbojpeg = { version = "1.4.0", optional = true }

ocl = { version = "0.19.7", optional = true }

tokio = { version = "1.51.0", features = ["rt-multi-thread", "macros", "time", "io-util"] }

[features]
default = [
    "fev_color",
    "zen_color",
    "zune_color",
    "moz_color",
    "turbo_color",
    "cpu_depth",
    "opencl_depth",
    "opencl_kde_depth",
]

fev_color = ["dep:fev", "dep:winit"]
zen_color = ["dep:zenjpeg", "dep:enough"]
zune_color = ["dep:zune-jpeg"]
moz_color = ["dep:mozjpeg"]
turbo_color = ["dep:turbojpeg"]

cpu_depth = []
opencl_depth = ["dep:ocl"]
opencl_kde_depth = ["dep:ocl"]
